--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,6 +14,35 @@ services:
       - 27017:27017
     # command: mongod --smallfiles --logpath=/dev/null # --quiet
 
+  auth:
+    image: slaclab/explgbk-auth
+    environment:
+      ###
+      # fake a user
+      ###
+      - FAKE_AUTH=1
+      - FAKE_AUTH_USER=ytl
+      ###
+      # the dns name to forward/proxy traffic to/from
+      ###
+      - PROXY_HOST=explgbk
+      ###
+      # uncomment the following if you want to use some dummy certs
+      ###
+      # - GENERATE_DUMMY_CERTS=yes
+    
+    ###
+    # use this bind mount if you have your own certs that you want to use
+    ###
+    volumes:
+      - ${HOME}/certs/cryoem-logbook.crt:/etc/httpd/certs/cert.crt
+      - ${HOME}/certs/cryoem-logbook.key:/etc/httpd/certs/cert.key
+      - ${HOME}/certs/keytab_webauth.cryoem-logbook:/etc/httpd/certs/keytab_webauth
+    ports:
+      - 443:443
+      - 80:80
+
+
   explgbk:
     image: slaclab/explgbk-docker:latest
     environment:
@@ -35,3 +64,6 @@ services:
       - 8000:8000
     depends_on:
       - mongodb
+      - auth
+      
+  
