--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '2'
+version: '3'
 services:
 
   mongodb:
@@ -9,9 +9,7 @@ services:
       - MONGO_INITDB_ROOT_USERNAME=admin
       - MONGO_INITDB_ROOT_PASSWORD=somepassword
     volumes:
-      # - ./data/mongodb01/configdb:/data/configdb
-      # - ./data/mongodb01/db:/data/db
-      - ./data/mongodb01:/data
+      - ../data/mongodb01:/data
       - ./mongodb-init.d:/docker-entrypoint-initdb.d
     ports:
       - 27017:27017
@@ -19,16 +17,14 @@ services:
 
   zookeeper:
     image: wurstmeister/zookeeper
-    ports:
-      - "2181:2181"
-  
+    volumes:
+      - ../data/zookeeper01/data:/opt/zookeeper-3.4.9/data
+
   kafka:
     image: wurstmeister/kafka:latest
     ports:
       - "9094:9094"
-        # published: 9094
-        # protocol: tcp
-        # mode: host
+      - "9092:9092"
     environment:
       HOSTNAME_COMMAND: "docker info | grep ^Name: | cut -d' ' -f 2"      
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
@@ -41,6 +37,21 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     depends_on:
       - zookeeper
+    # deploy:
+    #   restart_policy:
+    #     condition: on-failure
+    #     delay: 5s
+    #     max_attempts: 3
+    #     window: 120s
+
+
+  kafka-consumer:
+    image: slaclab/kafka-consumer:latest
+    environment:
+      - KAFKA_BOOTSTRAP_SERVER=kafka:9092
+    depends_on:
+      - kafka
+
 
   auth:
     image: slaclab/explgbk-auth
@@ -66,7 +77,7 @@ services:
       # uncomment the following if you want to use some dummy certs
       ###
       # - GENERATE_DUMMY_CERTS=yes
-    
+
     ###
     # use this bind mount if you have your own certs that you want to use
     ###
@@ -93,9 +104,11 @@ services:
       - ROLES_DATABASE_USER=reader
       - ROLES_DATABASE_PASSWORD=somepassword
       - KAFKA_BOOTSTRAP_SERVER=kafka:9092
-    # volumes:
-    #     - .:/var/www:rw
-    #     - /tmp/.X11-unix:/tmp/.X11-unix:rw
+    ###
+    # uncomment volumes for development
+    ###
+    volumes:
+      - ./explgbk:/app
     ports:
       - 8000:8000
     depends_on:
