--- a/kubernetes/secrets.yaml
+++ b/kubernetes/secrets.yaml
@@ -4,8 +4,8 @@ metadata:
   name: mongodb
 type: Opaque
 data:
-  username: <<echo -n 'username' | base64>>
-  password: <<echo -n 'password' | base64>>
+  username: $(echo -n "${mongodb__username}" | base64)
+  password: $(echo -n "${mongodb__password}" | base64)
   
 ---
   
@@ -16,8 +16,8 @@ metadata:
   name: explgbk-writer
 type: Opaque
 data:
-  username: <<echo -n 'username' | base64>>
-  password: <<echo -n 'password' | base64>>
+  username: $(echo -n "${explgbk_writer__username}" | base64)
+  password: $(echo -n "${explgbk_writer__password}" | base64)
 
 ---
   
@@ -28,8 +28,8 @@ metadata:
   name: explgbk-reader
 type: Opaque
 data:
-  username: <<echo -n 'username' | base64>>
-  password: <<echo -n 'password' | base64>>
+  username: $(echo -n "${explgbk_reader__username}" | base64)
+  password: $(echo -n "${explgbk_reader__password}" | base64)
   
 ---
   
@@ -40,8 +40,9 @@ metadata:
   name: auth-secrets
 type: Opaque
 data:
-  cert.crt: <<cat cert.crt | base64 >>
-  cert.key: <<cat cert.key | base64 >>
-  keytab_webauth: <<cat keytab_webauth | base64 >>
-  backend.htpasswd: <<cat backend.htpasswd | base64 >>
+  cert.crt: $(cat ${explgbk__cert_crt} | base64 -w 0)
+  cert.key: $(cat ${explgbk__cert_key} | base64 -w 0)
+  keytab_webauth: $(cat ${explgbk__keytab_webauth} | base64 -w 0)
+  backend.htpasswd: $(cat ${explgbk__backend_htpasswd} | base64 -w 0)
+  
   
