--- a/kubernetes/database.yaml
+++ b/kubernetes/database.yaml
@@ -30,13 +30,11 @@ spec:
     metadata:
       labels:
         role: mongo
-        environment: prod
+        environment: ${environment}
     spec:
       terminationGracePeriodSeconds: 10
       nodeSelector:
-        # group: cryoem
-        storage: gpfs
-        # prob need gpfs=cryo
+$(list=(${database__nodeSelectors// / }); for k in "${!list[@]}"; do kv=(${list[k]//\=/ }); echo "        ${kv[0]}: ${kv[1]}"; done)
       containers:
         - name: mongo
           image: mongo
@@ -45,7 +43,7 @@ spec:
             # - --config=/data/configdb/mongod.conf
             - --dbpath=/data/db
             - "--replSet"
-            - rs0
+            - "${environment}"
             - "--smallfiles"
             - "--noprealloc"
             - "--bind_ip"
@@ -80,39 +78,39 @@ spec:
           volumeMounts:
             - name: mongo
               mountPath: /data/db
-            - name: docker-initdb-config
-              mountPath: /docker-entrypoint-initdb.d
+          #  - name: docker-initdb-config
+          #    mountPath: /docker-entrypoint-initdb.d
         - name: mongo-sidecar
           image: cvallance/mongo-k8s-sidecar
           env:
             - name: KUBERNETES_MONGO_SERVICE_NAME
               value: mongo
             - name: MONGO_SIDECAR_POD_LABELS
-              value: "role=mongo,environment=prod"
-      volumes:
-        - name: docker-initdb-config
-          configMap:
-            name: docker-initdb-config
-            items:
-            - key: 10_users.sh
-              path: 10_users.sh
-            - key: 20_site.js
-              path: 20_site.js
-            - key: 30_instruments.js
-              path: 30_instruments.js
-            - key: 40_experiments.sh
-              path: 40_experiments.sh
-            - key: 45_experiment_switch.js
-              path: 45_experiment_switch.js
-            - key: 50_site-roles.js
-              path: 50_site-roles.js
+              value: "role=mongo,environment=${environment}"
+      #volumes:
+      #  - name: docker-initdb-config
+      #    configMap:
+      #      name: docker-initdb-config
+      #      items:
+      #      - key: 10_users.sh
+      #        path: 10_users.sh
+      #      - key: 20_site.js
+      #        path: 20_site.js
+      #      - key: 30_instruments.js
+      #        path: 30_instruments.js
+      #      - key: 40_experiments.sh
+      #        path: 40_experiments.sh
+      #      - key: 45_experiment_switch.js
+      #        path: 45_experiment_switch.js
+      #      - key: 50_site-roles.js
+      #        path: 50_site-roles.js
         
   volumeClaimTemplates:
     - metadata:
         name: mongo
       spec:
         accessModes: [ "ReadWriteOnce" ]
-        storageClassName: cryoem-logbook-mongodb
+        storageClassName: ${namespace}--mongo--${environment}
         resources:
           requests:
             storage: 20Gi
