--- a/kubernetes/database-storage.yaml
+++ b/kubernetes/database-storage.yaml
@@ -17,37 +17,37 @@ spec:
   hostPath:
     path: ${storage__prefix_path}/mongo-${environment}-0
 
----
-
-kind: PersistentVolume
-apiVersion: v1
-metadata:
-  name: ${namespace}-mongo-${environment}-1
-  labels:
-    type: local
-spec:
-  storageClassName: ${namespace}--mongo--${environment}
-  capacity:
-    storage: 20Gi
-  accessModes:
-    - ReadWriteOnce
-  hostPath:
-    path: ${storage__prefix_path}/mongo-${environment}-1
-
----
-
-kind: PersistentVolume
-apiVersion: v1
-metadata:
-  name: ${namespace}-mongo-${environment}-2
-  labels:
-    type: local
-spec:
-  storageClassName: ${namespace}--mongo--${environment}
-  capacity:
-    storage: 20Gi
-  accessModes:
-    - ReadWriteOnce
-  hostPath:
-    path: ${storage__prefix_path}/mongo-${environment}-2
-
+# ---
+#
+# kind: PersistentVolume
+# apiVersion: v1
+# metadata:
+#   name: ${namespace}-mongo-${environment}-1
+#   labels:
+#     type: local
+# spec:
+#   storageClassName: ${namespace}--mongo--${environment}
+#   capacity:
+#     storage: 20Gi
+#   accessModes:
+#     - ReadWriteOnce
+#   hostPath:
+#     path: ${storage__prefix_path}/mongo-${environment}-1
+#
+# ---
+#
+# kind: PersistentVolume
+# apiVersion: v1
+# metadata:
+#   name: ${namespace}-mongo-${environment}-2
+#   labels:
+#     type: local
+# spec:
+#   storageClassName: ${namespace}--mongo--${environment}
+#   capacity:
+#     storage: 20Gi
+#   accessModes:
+#     - ReadWriteOnce
+#   hostPath:
+#     path: ${storage__prefix_path}/mongo-${environment}-2
+#
