--- a/kubernetes/database.yaml
+++ b/kubernetes/database.yaml
@@ -64,6 +64,7 @@ $(list=(${database__nodeSelectors// / }); for k in "${!list[@]}"; do kv=(${list[
           ports:
             - containerPort: 27017
           livenessProbe:
+            initialDelaySeconds: 300
             exec:
               command:
                 - mongo
