--- a/kubernetes/message_bus.yaml
+++ b/kubernetes/message_bus.yaml
@@ -73,8 +73,8 @@ spec:
                     values:
                     - zk
               topologyKey: "kubernetes.io/hostname"
-      #nodeSelector:
-      #  group: cryoem
+      nodeSelector:
+$(list=(${message_bus_zk__nodeSelectors// / }); for k in "${!list[@]}"; do kv=(${list[k]//\=/ }); echo "        ${kv[0]}: ${kv[1]}"; done)
       containers:
       - name: kubernetes-zookeeper
         imagePullPolicy: Always
@@ -169,7 +169,7 @@ spec:
     protocol: TCP
   selector:
     app: kafka
-  clusterIP: None
+  #clusterIP: None
   # type: ClusterIP
 
 ---
@@ -185,43 +185,43 @@ data:
     set -x
     cp /etc/kafka-configmap/log4j.properties /etc/kafka/
 
-    KAFKA_BROKER_ID=${HOSTNAME##*-}
-    SEDS=("s/#init#broker.id=#init#/broker.id=$KAFKA_BROKER_ID/")
-    LABELS="kafka-broker-id=$KAFKA_BROKER_ID"
+    KAFKA_BROKER_ID=\${HOSTNAME##*-}
+    SEDS=("s/#init#broker.id=#init#/broker.id=\$KAFKA_BROKER_ID/")
+    LABELS="kafka-broker-id=\$KAFKA_BROKER_ID"
     ANNOTATIONS=""
 
     hash kubectl 2>/dev/null || {
       SEDS+=("s/#init#broker.rack=#init#/#init#broker.rack=# kubectl not found in path/")
     } && {
-      ZONE=$(kubectl get node "$NODE_NAME" -o=go-template='{{index .metadata.labels "failure-domain.beta.kubernetes.io/zone"}}')
-      if [ $? -ne 0 ]; then
+      ZONE=\$(kubectl get node "\$NODE_NAME" -o=go-template='{{index .metadata.labels "failure-domain.beta.kubernetes.io/zone"}}')
+      if [ \$? -ne 0 ]; then
         SEDS+=("s/#init#broker.rack=#init#/#init#broker.rack=# zone lookup failed, see -c init-config logs/")
-      elif [ "x$ZONE" == "x<no value>" ]; then
-        SEDS+=("s/#init#broker.rack=#init#/#init#broker.rack=# zone label not found for node $NODE_NAME/")
+      elif [ "x\$ZONE" == "x<no value>" ]; then
+        SEDS+=("s/#init#broker.rack=#init#/#init#broker.rack=# zone label not found for node \$NODE_NAME/")
       else
-        SEDS+=("s/#init#broker.rack=#init#/broker.rack=$ZONE/")
-        LABELS="$LABELS kafka-broker-rack=$ZONE"
+        SEDS+=("s/#init#broker.rack=#init#/broker.rack=\$ZONE/")
+        LABELS="\$LABELS kafka-broker-rack=\$ZONE"
       fi
 
-      # OUTSIDE_HOST=$(kubectl get node "$NODE_NAME" -o jsonpath='{.status.addresses[?(@.type=="InternalIP")].address}')
+      # OUTSIDE_HOST=\$(kubectl get node "\$NODE_NAME" -o jsonpath='{.status.addresses[?(@.type=="InternalIP")].address}')
       OUTSIDE_HOST=kafka
-      if [ $? -ne 0 ]; then
+      if [ \$? -ne 0 ]; then
         echo "Outside (i.e. cluster-external access) host lookup command failed"
       else
-        OUTSIDE_PORT=3240${KAFKA_BROKER_ID}
-        SEDS+=("s|#init#advertised.listeners=OUTSIDE://#init#|advertised.listeners=OUTSIDE://${OUTSIDE_HOST}:${OUTSIDE_PORT}|")
-        ANNOTATIONS="$ANNOTATIONS kafka-listener-outside-host=$OUTSIDE_HOST kafka-listener-outside-port=$OUTSIDE_PORT"
+        OUTSIDE_PORT=3240\${KAFKA_BROKER_ID}
+        SEDS+=("s|#init#advertised.listeners=OUTSIDE://#init#|advertised.listeners=OUTSIDE://\${OUTSIDE_HOST}:\${OUTSIDE_PORT}|")
+        ANNOTATIONS="\$ANNOTATIONS kafka-listener-outside-host=\$OUTSIDE_HOST kafka-listener-outside-port=\$OUTSIDE_PORT"
       fi
 
-      if [ ! -z "$LABELS" ]; then
-        kubectl -n $POD_NAMESPACE label pod $POD_NAME $LABELS || echo "Failed to label $POD_NAMESPACE.$POD_NAME - RBAC issue?"
+      if [ ! -z "\$LABELS" ]; then
+        kubectl -n \$POD_NAMESPACE label pod \$POD_NAME \$LABELS || echo "Failed to label \$POD_NAMESPACE.\$POD_NAME - RBAC issue?"
       fi
-      if [ ! -z "$ANNOTATIONS" ]; then
-        kubectl -n $POD_NAMESPACE annotate pod $POD_NAME $ANNOTATIONS || echo "Failed to annotate $POD_NAMESPACE.$POD_NAME - RBAC issue?"
+      if [ ! -z "\$ANNOTATIONS" ]; then
+        kubectl -n \$POD_NAMESPACE annotate pod \$POD_NAME \$ANNOTATIONS || echo "Failed to annotate \$POD_NAMESPACE.\$POD_NAME - RBAC issue?"
       fi
     }
-    printf '%s\n' "${SEDS[@]}" | sed -f - /etc/kafka-configmap/server.properties > /etc/kafka/server.properties.tmp
-    [ $? -eq 0 ] && mv /etc/kafka/server.properties.tmp /etc/kafka/server.properties
+    printf '%s\n' "\${SEDS[@]}" | sed -f - /etc/kafka-configmap/server.properties > /etc/kafka/server.properties.tmp
+    [ \$? -eq 0 ] && mv /etc/kafka/server.properties.tmp /etc/kafka/server.properties
 
   server.properties: |-
     ############################# Log Basics #############################
@@ -371,37 +371,37 @@ data:
 
     log4j.appender.kafkaAppender=org.apache.log4j.DailyRollingFileAppender
     log4j.appender.kafkaAppender.DatePattern='.'yyyy-MM-dd-HH
-    log4j.appender.kafkaAppender.File=${kafka.logs.dir}/server.log
+    log4j.appender.kafkaAppender.File=\${kafka.logs.dir}/server.log
     log4j.appender.kafkaAppender.layout=org.apache.log4j.PatternLayout
     log4j.appender.kafkaAppender.layout.ConversionPattern=[%d] %p %m (%c)%n
 
     log4j.appender.stateChangeAppender=org.apache.log4j.DailyRollingFileAppender
     log4j.appender.stateChangeAppender.DatePattern='.'yyyy-MM-dd-HH
-    log4j.appender.stateChangeAppender.File=${kafka.logs.dir}/state-change.log
+    log4j.appender.stateChangeAppender.File=\${kafka.logs.dir}/state-change.log
     log4j.appender.stateChangeAppender.layout=org.apache.log4j.PatternLayout
     log4j.appender.stateChangeAppender.layout.ConversionPattern=[%d] %p %m (%c)%n
 
     log4j.appender.requestAppender=org.apache.log4j.DailyRollingFileAppender
     log4j.appender.requestAppender.DatePattern='.'yyyy-MM-dd-HH
-    log4j.appender.requestAppender.File=${kafka.logs.dir}/kafka-request.log
+    log4j.appender.requestAppender.File=\${kafka.logs.dir}/kafka-request.log
     log4j.appender.requestAppender.layout=org.apache.log4j.PatternLayout
     log4j.appender.requestAppender.layout.ConversionPattern=[%d] %p %m (%c)%n
 
     log4j.appender.cleanerAppender=org.apache.log4j.DailyRollingFileAppender
     log4j.appender.cleanerAppender.DatePattern='.'yyyy-MM-dd-HH
-    log4j.appender.cleanerAppender.File=${kafka.logs.dir}/log-cleaner.log
+    log4j.appender.cleanerAppender.File=\${kafka.logs.dir}/log-cleaner.log
     log4j.appender.cleanerAppender.layout=org.apache.log4j.PatternLayout
     log4j.appender.cleanerAppender.layout.ConversionPattern=[%d] %p %m (%c)%n
 
     log4j.appender.controllerAppender=org.apache.log4j.DailyRollingFileAppender
     log4j.appender.controllerAppender.DatePattern='.'yyyy-MM-dd-HH
-    log4j.appender.controllerAppender.File=${kafka.logs.dir}/controller.log
+    log4j.appender.controllerAppender.File=\${kafka.logs.dir}/controller.log
     log4j.appender.controllerAppender.layout=org.apache.log4j.PatternLayout
     log4j.appender.controllerAppender.layout.ConversionPattern=[%d] %p %m (%c)%n
 
     log4j.appender.authorizerAppender=org.apache.log4j.DailyRollingFileAppender
     log4j.appender.authorizerAppender.DatePattern='.'yyyy-MM-dd-HH
-    log4j.appender.authorizerAppender.File=${kafka.logs.dir}/kafka-authorizer.log
+    log4j.appender.authorizerAppender.File=\${kafka.logs.dir}/kafka-authorizer.log
     log4j.appender.authorizerAppender.layout=org.apache.log4j.PatternLayout
     log4j.appender.authorizerAppender.layout.ConversionPattern=[%d] %p %m (%c)%n
 
@@ -417,13 +417,13 @@ data:
     log4j.logger.kafka.request.logger=WARN, requestAppender
     log4j.additivity.kafka.request.logger=false
 
-    # Uncomment the lines below and change log4j.logger.kafka.network.RequestChannel$ to TRACE for additional output
+    # Uncomment the lines below and change log4j.logger.kafka.network.RequestChannel\$ to TRACE for additional output
     # related to the handling of requests
     #log4j.logger.kafka.network.Processor=TRACE, requestAppender
     #log4j.logger.kafka.server.KafkaApis=TRACE, requestAppender
     #log4j.additivity.kafka.server.KafkaApis=false
-    log4j.logger.kafka.network.RequestChannel$=WARN, requestAppender
-    log4j.additivity.kafka.network.RequestChannel$=false
+    log4j.logger.kafka.network.RequestChannel\$=WARN, requestAppender
+    log4j.additivity.kafka.network.RequestChannel\$=false
 
     log4j.logger.kafka.controller=TRACE, controllerAppender
     log4j.additivity.kafka.controller=false
@@ -461,8 +461,8 @@ spec:
       # annotations:
     spec:
       terminationGracePeriodSeconds: 30
-      #nodeSelector:
-      #  group: cryoem
+      nodeSelector:
+$(list=(${message_bus_kafka__nodeSelectors// / }); for k in "${!list[@]}"; do kv=(${list[k]//\=/ }); echo "        ${kv[0]}: ${kv[1]}"; done)
       initContainers:
       - name: init-config
         image: solsson/kafka-initutils
