--- a/kubernetes/base/auth.yaml
+++ b/kubernetes/base/auth.yaml
@@ -29,143 +29,12 @@ spec:
 
 ---
 
-
-kind: ConfigMap
-metadata:
-  name: auth-explgbk-config
-apiVersion: v1
-data:
-  explgbk.conf: |-
-    # prevent .htaccess and .htpasswd files from being viewed by Web clients.
-    <Files ".ht*">
-        Require all denied
-    </Files>
-
-    # LogLevel: Control the number of messages logged to the error_log.
-    # Possible values include: debug, info, notice, warn, error, crit,
-    # alert, emerg.
-    LogLevel warn
-
-    #turn on url rewriting
-    RewriteEngine on
-
-    AddType application/x-pkcs7-crl    .crl
-    SSLPassPhraseDialog  builtin
-    SSLSessionCache         shmcb:/var/cache/mod_ssl/scache(512000)
-    SSLSessionCacheTimeout  300
-    #SSLMutex default
-    SSLRandomSeed startup file:/dev/urandom  256
-    SSLRandomSeed connect builtin
-    SSLCryptoDevice builtin
-
-    # FAKE AUTH SETTINGS
-    #SetEnv REMOTE_USER someone
-    #SetEnv WEBAUTH_USER someone
-    #SetEnv AUTH_TYPE WebAuth
-    #SetEnv WEBAUTH_TOKEN_CREATION 1000000000
-    #SetEnv WEBAUTH_TOKEN_EXPIRATION 2000000000
-    #SetEnv WEBAUTH_FACTORS_INITIAL p
-    #SetEnv WEBAUTH_FACTORS_SESSION p
-
-    NameVirtualHost *:80
-    <VirtualHost *:80>
-        # ServerAdmin admin@localhost.com
-        # ServerName localhost
-        Redirect permanent / https://localhost/
-    </VirtualHost>
-
-    <VirtualHost *:443>
-        # ServerAdmin admin@localhost.com
-        # ServerName localhost
-        SSLEngine on
-        SSLHonorCipherOrder on
-        SSLProtocol +TLSv1 +TLSv1.1 +TLSv1.2 -SSLv2 -SSLv3 -TLSv1 -TLSv1.1 
-        SSLCipherSuite "EECDH+ECDSA+AESGCM EECDH+aRSA+AESGCM EECDH+ECDSA+SHA384 EECDH+ECDSA+SHA256 EECDH+aRSA+SHA384 EECDH+aRSA+SHA256 EECDH+aRSA+RC4 EECDH EDH+aRSA RC4 !aNULL !eNULL !LOW !3DES !MD5 !EXP !PSK !SRP !DSS"
-        #SSLCertificateChainFile /etc/httpd/certs/intermediates.cer
-        SSLCertificateFile /etc/httpd/certs/cert.crt
-        SSLCertificateChainFile /etc/httpd/certs/intermediates.cer
-        SSLCertificateKeyFile /etc/httpd/certs/cert.key
-        Header always set Strict-Transport-Security "max-age=63072000; includeSubdomains;"
-
-        LogLevel    info
-        ErrorLog    /dev/stderr
-        CustomLog   /dev/stdout combined
-
-        WebAuthCredCacheDir conf/webauth/credcache/
-        # WebAuthDebug on
-
-        #<Proxy *>
-        #    Order deny,allow
-        #    Allow from all
-        #</Proxy>
-
-        <LocationMatch "^/lgbk_socketio/(.*)$">
-            RequestHeader set REMOTE_USER "%{REMOTE_USER}e"
-            ProxyPass ws://explgbk:8000/$1
-            ProxyPassReverse ws://explgbk:8000/$1
-        </LocationMatch>
-
-        <LocationMatch "^/(?<yyyymm>[^/]+)/(?<expname>[^_]+)_TEM(?<tem>\d)/(?<filepath>.*)$">
-            SSLOptions +StdEnvVars
-            WebAuthExtraRedirect on
-            AuthType WebAuth
-            require valid-user
-            Alias "/expdata/%{env:MATCH_YYYYMM}/%{env:MATCH_EXPNAME}_TEM%{env:MATCH_TEM}/%{env:MATCH_FILEPATH}"
-            SetEnvIf Cookie "LGBK_EXT_PREVIEW=([^;]+)" HASHED_PREVIEW_COOKIE=$1
-            Require expr "%{base64:%{md5:%{reqenv:MATCH_EXPNAME}SLACExpLgBk}} == %{unescape:%{reqenv:HASHED_PREVIEW_COOKIE}}"
-        </LocationMatch>
-
-        <Location "/cryoem-data/">
-            SSLOptions +StdEnvVars
-            AuthType Basic
-            AuthName "Authentication Required"
-            AuthUserFile "/etc/httpd/certs/backend.htpasswd"
-            require valid-user
-            RequestHeader set REMOTE_USER "%{REMOTE_USER}s"
-            ProxyPass  http://explgbk:8000/
-            ProxyPassReverse  http://explgbk:8000/
-        </Location>
-
-        # use prefix here
-        <Location "/lgbk/">
-            SSLOptions +StdEnvVars
-            # RewriteEngine On
-            WebAuthExtraRedirect on
-            AuthType WebAuth
-            require valid-user
-            RequestHeader set REMOTE_USER "%{REMOTE_USER}s"
-            ProxyPass  http://explgbk:8000/lgbk/
-            ProxyPassReverse  http://explgbk:8000/lgbk/
-        </Location>
-        <Location "/js/">
-            SSLOptions +StdEnvVars
-            # RewriteEngine On
-            RequestHeader set REMOTE_USER "%{REMOTE_USER}s"
-            ProxyPass  http://explgbk:8000/js/
-            ProxyPassReverse  http://explgbk:8000/js/
-        </Location>
-        <Location "/static/">
-            SSLOptions +StdEnvVars
-            # RewriteEngine On
-            RequestHeader set REMOTE_USER "%{REMOTE_USER}s"
-            ProxyPass  http://explgbk:8000/static/
-            ProxyPassReverse  http://explgbk:8000/static/
-        </Location>
-
-        SetEnvIf User-Agent ".*MSIE.*" \
-             nokeepalive ssl-unclean-shutdown \
-             downgrade-1.0 force-response-1.0
-
-    </VirtualHost>
-
-
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: auth
 spec:
-  replicas: 1 
+  replicas: 2 
   selector:
     matchLabels:
       name: auth
@@ -249,7 +118,7 @@ spec:
             claimName: cryoem-logbook--expdata
         - name: auth-configmap
           configMap:
-            name: auth-explgbk-config
+            name: auth-config
             items:
               - key: explgbk.conf
                 path: explgbk.conf
