--- a/kubernetes/overlays/dev/database-storage.yaml
+++ b/kubernetes/overlays/dev/database-storage.yaml
@@ -21,7 +21,7 @@ spec:
         - key: kubernetes.io/hostname
           operator: In
           values:
-          - influxdb04
+          - ocio-gpu02
 
 ---
 kind: PersistentVolume
@@ -47,7 +47,7 @@ spec:
         - key: kubernetes.io/hostname
           operator: In
           values:
-          - influxdb04
+          - os-dev02
 
 ---
 kind: PersistentVolume
@@ -73,5 +73,5 @@ spec:
         - key: kubernetes.io/hostname
           operator: In
           values:
-          - influxdb04
+          - os-dev03
 
