--- a/kubernetes/base/database.yaml
+++ b/kubernetes/base/database.yaml
@@ -14,6 +14,48 @@ spec:
     role: mongo
     
 ---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: mongo-0
+spec:
+  ports:
+  - port: 27017
+    targetPort: 27017
+  selector:
+    role: mongo
+    statefulset.kubernetes.io/pod-name: mongo-0 
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: mongo-1
+spec:
+  ports:
+  - port: 27017
+    targetPort: 27017
+  selector:
+    role: mongo
+    statefulset.kubernetes.io/pod-name: mongo-1
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: mongo-2
+spec:
+  ports:
+  - port: 27017
+    targetPort: 27017
+  selector:
+    role: mongo
+    statefulset.kubernetes.io/pod-name: mongo-2
+
+---
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -98,6 +140,28 @@ spec:
               memory: 4Gi
           #  - name: docker-initdb-config
           #    mountPath: /docker-entrypoint-initdb.d
+        - name: telegraf
+          image: docker.io/telegraf:1.13.2
+          resources:
+            limits:
+              memory: 500Mi
+            requests:
+              cpu: 500m
+              memory: 500Mi
+          env:
+            - name: ENVIRONMENT
+              value: dev
+            - name: MONGODB_HOST
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
+            - name: MONITOR_HOST
+              value: http://influxdb01.slac.stanford.edu:8086
+            - name: MONITOR_DATABASE
+              value: cryoem-logbook
+          volumeMounts:
+          - name: telegraf-config
+            mountPath: /etc/telegraf
         #- name: mongo-sidecar
         #  image: cvallance/mongo-k8s-sidecar:latest
         #  env:
@@ -136,7 +200,11 @@ spec:
         #      - --eval
         #      - "status=rs.status()['ok']; if(status>0){quit(0)}else{quit(127)};"
         #  - bash -c "while true; do /usr/bin/mongo --quiet --eval 'rs.status()' | grep ok | cut -d ':' -f 2 | tr -dc '0-9' | awk '/0/{ exit 127 }'; sleep 30; done"
-        
+        #
+      volumes:
+        - name: telegraf-config
+          configMap:
+            name: telegraf-mongodb
   volumeClaimTemplates: 
     - metadata:
         name: mongo-data
