--- a/kubernetes/base/database.yaml
+++ b/kubernetes/base/database.yaml
@@ -75,21 +75,21 @@ spec:
     spec:
       terminationGracePeriodSeconds: 60
       # prevent colocation of replicas
-      #affinity:
-      #  podAntiAffinity:
-      #    preferredDuringSchedulingIgnoredDuringExecution:
-      #    - weight: 100
-      #      podAffinityTerm:
-      #        labelSelector:
-      #          matchExpressions:
-      #          - key: role
-      #            operator: In
-      #            values: 
-      #            - mongo
-      #        topologyKey: kubernetes.io/hostname
+      affinity:
+        podAntiAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+          - weight: 100
+            podAffinityTerm:
+              labelSelector:
+                matchExpressions:
+                - key: role
+                  operator: In
+                  values: 
+                  - mongo
+              topologyKey: kubernetes.io/hostname
       containers:
         - name: mongo
-          image: mongo:4.0
+          image: mongo:4.2.3
           command:
             - mongod
             # - --config=/data/configdb/mongod.conf
@@ -97,7 +97,7 @@ spec:
             - --replSet
             - rs0
             #- "--smallfiles"
-            - "--noprealloc"
+            #- "--noprealloc"
             - "--bind_ip"
             - 0.0.0.0
           env:
@@ -156,7 +156,7 @@ spec:
                 fieldRef:
                   fieldPath: metadata.name
             - name: MONITOR_HOST
-              value: http://influxdb01.slac.stanford.edu:8086
+              value: https://influxdb.slac.stanford.edu:443
             - name: MONITOR_DATABASE
               value: cryoem-logbook
           volumeMounts:
@@ -210,7 +210,7 @@ spec:
         name: mongo-data
       spec:
         accessModes: [ "ReadWriteOnce" ]
-        storageClassName: cryoem-logbook--mongo
+        storageClassName: cryoem-logbook-prod--mongo
         resources:
           requests:
             storage: 20Gi
