more changes for prod

--- a/kubernetes/base/telegraf-mongodb.conf
+++ b/kubernetes/base/telegraf-mongodb.conf
@@ -6,7 +6,7 @@ debug = true
 
 [[inputs.mongodb]]
 servers = ["mongodb://$MONGODB_HOST:27017"]
-insecure_skip_verify = true
+#insecure_skip_verify = true
 
 [[outputs.influxdb]]
 urls = ["$MONITOR_HOST"] 
