--- a/kubernetes/overlays/dev/kustomization.yaml
+++ b/kubernetes/overlays/dev/kustomization.yaml
@@ -35,4 +35,5 @@ secretGenerator:
 
 images:
 - name: slaclab/explgbk-docker
-  newTag: '20200124.0'
+  #newTag: '20200218.0'
+  newTag: '20200226.2'
