--- a/kubernetes/overlays/dev/ingress.yaml
+++ b/kubernetes/overlays/dev/ingress.yaml
@@ -6,6 +6,8 @@ metadata:
   name: www
   annotations:
     nginx.ingress.kubernetes.io/ssl-passthrough: "true"
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
 spec:
   rules:
     - host: cryoem-logbook-dev.slac.stanford.edu
