--- a/Dockerfile.collab-listener
+++ b/Dockerfile.collab-listener
@@ -1,7 +1,7 @@
 FROM python:3.6-alpine
 
 RUN apk update && apk add --no-cache python3 librdkafka acl \
-    && pip install kafka
+    && pip install kafka requests
 
 ADD collab-listener.py /collab-listener.py
 
