--- a/kubernetes/overlays/prod/kustomization.yaml
+++ b/kubernetes/overlays/prod/kustomization.yaml
@@ -8,10 +8,13 @@ resources:
 - database-storage.yaml
 - ingress.yaml
 - cryoem-storage.yaml
+- rbac.yaml
 
 patchesStrategicMerge:
 - auth-patches.yaml
 - storage-patches.yaml
+- logbook-patches.yaml
+- collab-listener-patches.yaml
 #- nodeSelector-patches.yaml
 
 secretGenerator:
@@ -42,7 +45,7 @@ secretGenerator:
 
 images:
 - name: slaclab/explgbk-docker
-  #newTag: '20200501.1'
-  newTag: '20200525.0'
+  #newTag: '20200525.0'
+  newTag: '20201008.0'
 - name: slaclab/explgbk-collab-listener
   newTag: "20200501.1"
