increase proxy timeout

--- a/kubernetes/base/explgbk.conf
+++ b/kubernetes/base/explgbk.conf
@@ -79,12 +79,13 @@ NameVirtualHost *:80
 
     <Location "/cryoem-data/">
         SSLOptions +StdEnvVars
+        #SetEnv proxy-initial-not-pooled 1
         AuthType Basic
         AuthName "Authentication Required"
         AuthUserFile "/etc/httpd/certs/backend.htpasswd"
         require valid-user
         RequestHeader set REMOTE_USER "%{REMOTE_USER}s"
-        ProxyPass  http://explgbk:8000/
+        ProxyPass  http://explgbk:8000/  timeout=1000
         ProxyPassReverse  http://explgbk:8000/
     </Location>
 
