--- a/kubernetes/base/message_bus.yaml
+++ b/kubernetes/base/message_bus.yaml
@@ -374,15 +374,15 @@ spec:
         emptyDir: {}
       - name: extensions
         emptyDir: {}
-      - name: data
-        emptyDir: {}
-  #volumeClaimTemplates:
-  #- metadata:
-  #    name: data
-  #  spec:
-  #    accessModes: [ "ReadWriteOnce" ]
-  #    resources:
-  #      requests:
-  #       storage: 10Gi
+      #- name: data
+      #  emptyDir: {}
+  volumeClaimTemplates:
+  - metadata:
+      name: data
+    spec:
+      accessModes: [ "ReadWriteOnce" ]
+      resources:
+        requests:
+         storage: 1Gi
 
 
