--- a/kubernetes/base/message_bus.yaml
+++ b/kubernetes/base/message_bus.yaml
@@ -14,6 +14,22 @@ rules:
   - get
 
 ---
+kind: ClusterRoleBinding
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: kafka-node-reader
+  labels:
+    origin: github.com_Yolean_kubernetes-kafka
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: node-reader
+subjects:
+- kind: ServiceAccount
+  name: default
+  namespace: kafka
+
+---
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
@@ -30,6 +46,26 @@ rules:
   - get
   - update
   - patch
+
+
+---
+kind: RoleBinding
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: kafka-pod-labler
+  namespace: kafka
+  labels:
+    origin: github.com_Yolean_kubernetes-kafka
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: Role
+  name: pod-labler
+subjects:
+- kind: ServiceAccount
+  name: default
+  namespace: kafka
+
+
 ---
 
 
@@ -151,7 +187,7 @@ data:
     log.retention.hours=-1
     # A size-based retention policy for logs. Segments are pruned from the log unless the remaining
     # segments drop below log.retention.bytes. Functions independently of log.retention.hours.
-    #log.retention.bytes=1073741824
+    log.retention.bytes=1073741824
     # The maximum size of a log segment file. When this size is reached a new log segment will be created.
     #log.segment.bytes=1073741824
     # The interval at which log segments are checked to see if they can be deleted according
@@ -268,6 +304,48 @@ spec:
     app: kafka
 
 
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: kafka-0
+spec:
+  ports:
+  - port: 9092
+    targetPort: 9092
+  selector:
+    app: kafka
+    statefulset.kubernetes.io/pod-name: kafka-0
+
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: kafka-1
+spec:
+  ports:
+  - port: 9092
+    targetPort: 9092
+  selector:
+    app: kafka
+    statefulset.kubernetes.io/pod-name: kafka-1
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: kafka-2
+spec:
+  ports:
+  - port: 9092
+    targetPort: 9092
+  selector:
+    app: kafka
+    statefulset.kubernetes.io/pod-name: kafka-2
+
+
 
 ---
 apiVersion: apps/v1
@@ -348,13 +426,10 @@ spec:
              command: ["sh", "-ce", "kill -s TERM 1; while $(kill -0 1 2>/dev/null); do sleep 1; done"]
         resources:
           requests:
-            cpu: 100m
-            memory: 100Mi
+            cpu: 500m
+            memory: 1024Mi
           limits:
-            # This limit was intentionally set low as a reminder that
-            # the entire Yolean/kubernetes-kafka is meant to be tweaked
-            # before you run production workloads
-            memory: 600Mi
+            memory: 6000Mi
         readinessProbe:
           tcpSocket:
             port: 9092
