--- a/kubernetes/overlays/prod/kustomization.yaml
+++ b/kubernetes/overlays/prod/kustomization.yaml
@@ -8,13 +8,15 @@ resources:
 - database-storage.yaml
 - ingress.yaml
 - cryoem-storage.yaml
-- rbac.yaml
+#- rbac.yaml
+- message_bus-storage.yaml
 
 patchesStrategicMerge:
 - auth-patches.yaml
 - storage-patches.yaml
 - logbook-patches.yaml
 - collab-listener-patches.yaml
+- message_bus-patches.yaml
 #- nodeSelector-patches.yaml
 
 secretGenerator:
@@ -45,7 +47,7 @@ secretGenerator:
 
 images:
 - name: slaclab/explgbk-docker
-  #newTag: '20200525.0'
-  newTag: '20201008.0'
+  newTag: '20201210.0'
+  #newTag: '20201124.0'
 - name: slaclab/explgbk-collab-listener
-  newTag: "20200501.1"
+  newTag: '20201019.1'
