--- a/kubernetes/overlays/prod/kustomization.yaml
+++ b/kubernetes/overlays/prod/kustomization.yaml
@@ -32,16 +32,16 @@ secretGenerator:
   - password=somepassword
 - name: auth-secrets
   files:
-  - ./cert.crt
-  - ./intermediates.cer
-  - ./cert.key
-  - ./keytab_webauth
-  - ./backend.htpasswd
+  - ./etc/cert.crt
+  - ./etc//intermediates.cer
+  - ./etc/cert.key
+  - ./etc/keytab_webauth
+  - ./etc/backend.htpasswd
 - name: collab-listener
   literals:
   - username=cryo-daq
   files:
-  - password=./collab-listener.password
+  - password=./etc/collab-listener.password
 
 images:
 - name: slaclab/explgbk-docker
