--- a/kubernetes/overlays/prod/message_bus-storage.yaml
+++ b/kubernetes/overlays/prod/message_bus-storage.yaml
@@ -1,43 +1,18 @@
 kind: PersistentVolume
 apiVersion: v1
 metadata:
-  name: cryoem-logbook-prod--mongo-0
+  name: cryoem-logbook-dev--kafka-0
   labels:
     type: local
 spec:
-  storageClassName: cryoem-logbook-prod--mongo
+  storageClassName: cryoem-logbook-dev--kafka
   capacity:
-    storage: 50Gi
+    storage: 1Gi
   accessModes:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
   hostPath:
-    path: /data/daq/prod/mongo/mongo-0
-  nodeAffinity:
-    required:
-      nodeSelectorTerms:
-      - matchExpressions:
-        - key: kubernetes.io/hostname
-          operator: In
-          values:
-          - neb0002.slac.stanford.edu 
-
----
-kind: PersistentVolume
-apiVersion: v1
-metadata:
-  name: cryoem-logbook-prod--mongo-2
-  labels:
-    type: local
-spec:
-  storageClassName: cryoem-logbook-prod--mongo
-  capacity:
-    storage: 50Gi
-  accessModes:
-    - ReadWriteOnce
-  persistentVolumeReclaimPolicy: Retain
-  hostPath:
-    path: /gpfs/slac/cryo/fs1/daq/prod/mongo/mongo-2
+    path: /gpfs/slac/cryo/fs1/daq/dev/kafka/kafka-0
   nodeAffinity:
     required:
       nodeSelectorTerms:
@@ -51,18 +26,43 @@ spec:
 kind: PersistentVolume
 apiVersion: v1
 metadata:
-  name: cryoem-logbook-prod--mongo-1
+  name: cryoem-logbook-dev--kafka-2
   labels:
     type: local
 spec:
-  storageClassName: cryoem-logbook-prod--mongo
+  storageClassName: cryoem-logbook-dev--kafka
   capacity:
-    storage: 50Gi
+    storage: 1Gi
   accessModes:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
   hostPath:
-    path: /opt/cryoem-logbook-prod/daq/prod/mongo/mongo-1
+    path: /gpfs/slac/cryo/fs1/daq/dev/kafka/kafka-2
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: storage/cryoem
+          operator: In
+          values:
+          - 'true'
+
+---
+kind: PersistentVolume
+apiVersion: v1
+metadata:
+  name: cryoem-logbook-dev--kafka-1
+  labels:
+    type: local
+spec:
+  storageClassName: cryoem-logbook-dev--kafka
+  capacity:
+    storage: 1Gi
+  accessModes:
+    - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Retain
+  hostPath:
+    path: /opt/cryoem-logbook-dev/daq/dev/kafka/kafka-1
   nodeAffinity:
     required:
       nodeSelectorTerms:
