--- a/kubernetes/base/zookeeper.yaml
+++ b/kubernetes/base/zookeeper.yaml
@@ -33,10 +33,16 @@ spec:
   ports:
   - port: 2181
     name: client
+    targetPort: 2181
+    protocol: TCP
   - port: 2888
     name: server
+    targetPort: 2888
+    protocol: TCP
   - port: 3888
     name: leader-election
+    targetPort: 3888
+    protocol: TCP
   clusterIP: None
   selector:
     role: zk
