--- a/kubernetes/base/kustomization.yaml
+++ b/kubernetes/base/kustomization.yaml
@@ -4,11 +4,12 @@ resources:
 #- database-storage.yaml
 #- cryoem-storage.yaml
 - zookeeper.yaml
+- zookeeper-service.yaml
 - message_bus.yaml
 - database.yaml
 - logbook.yaml
 - auth.yaml
-- collab-listener.yaml
+#- collab-listener.yaml
 
 configMapGenerator:
 - name: auth-config 
